--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,20 @@
 /* Global styles */
 
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+@font-face {
+	font-family: "Kumbh Sans";
+	src: url("../resources/fonts/KumbhSans-Regular.woff") format("woff");
+	src: url("../resources/fonts/KumbhSans-Regular.woff2") format("woff2");
+	src: url("../resources/fonts/KumbhSans-Regular.ttf") format("ttf");
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "Kumbh Sans";
+	src: url("../resources/fonts/KumbhSans-Bold.woff") format("woff");
+	src: url("../resources/fonts/KumbhSans-Bold.woff2") format("woff2");
+	src: url("../resources/fonts/KumbhSans-Bold.ttf") format("ttf");
+	font-weight: 700;
+}
 
 :root {
 	--very-dark-desaturated-blue: hsl(238, 29%, 16%);
