--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,17 @@
 
 @font-face {
 	font-family: "Kumbh Sans";
-	src: url("../resources/fonts/KumbhSans-Regular.woff") format("woff");
-	src: url("../resources/fonts/KumbhSans-Regular.woff2") format("woff2");
-	src: url("../resources/fonts/KumbhSans-Regular.ttf") format("ttf");
+	src: url("../resources/fonts/KumbhSans-Regular.woff");
+	src: url("../resources/fonts/KumbhSans-Regular.woff2");
+	src: url("../resources/fonts/KumbhSans-Regular.ttf");
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: "Kumbh Sans";
-	src: url("../resources/fonts/KumbhSans-Bold.woff") format("woff");
-	src: url("../resources/fonts/KumbhSans-Bold.woff2") format("woff2");
-	src: url("../resources/fonts/KumbhSans-Bold.ttf") format("ttf");
+	src: url("../resources/fonts/KumbhSans-Bold.woff");
+	src: url("../resources/fonts/KumbhSans-Bold.woff2");
+	src: url("../resources/fonts/KumbhSans-Bold.ttf");
 	font-weight: 700;
 }
 
