--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 @font-face {
 	font-family: "Kumbh Sans";
+	font-display: swap;
 	src: url("../resources/fonts/KumbhSans-Regular.woff");
 	src: url("../resources/fonts/KumbhSans-Regular.woff2");
 	src: url("../resources/fonts/KumbhSans-Regular.ttf");
@@ -10,6 +11,7 @@
 
 @font-face {
 	font-family: "Kumbh Sans";
+	font-display: swap;
 	src: url("../resources/fonts/KumbhSans-Bold.woff");
 	src: url("../resources/fonts/KumbhSans-Bold.woff2");
 	src: url("../resources/fonts/KumbhSans-Bold.ttf");
