--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+
 /* Global styles */
-
-@font-face {
-	font-family: "Kumbh Sans";
-	font-display: swap;
-	src: url("../resources/fonts/KumbhSans-Regular.woff");
-	src: url("../resources/fonts/KumbhSans-Regular.woff2");
-	src: url("../resources/fonts/KumbhSans-Regular.ttf");
-	font-weight: 400;
-}
-
-@font-face {
-	font-family: "Kumbh Sans";
-	font-display: swap;
-	src: url("../resources/fonts/KumbhSans-Bold.woff");
-	src: url("../resources/fonts/KumbhSans-Bold.woff2");
-	src: url("../resources/fonts/KumbhSans-Bold.ttf");
-	font-weight: 700;
-}
 
 :root {
 	--very-dark-desaturated-blue: hsl(238, 29%, 16%);
