--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,6 +25,8 @@
 
 body {
 	display: flex;
+	justify-content: center;
+	align-items: center;
 	flex-direction: column;
 	font-size: 0.75rem;
 	min-height: 100vh;
@@ -34,14 +36,14 @@ body {
 .card {
 	position: relative;
 	background-color: white;
-	width: 87.2%;
+	width: 87.202%;
 	margin: 9.375rem auto 0;
 	border-radius: 1.5rem;
 	box-shadow: 0 2.1875rem 5.625rem -0.3125rem rgba(0, 0, 0, 0.4);
 }
 
 .image-section {
-	margin-bottom: 8.75rem;
+	margin-bottom: 8.625rem;
 }
 
 .woman-illustration {
@@ -78,7 +80,7 @@ body {
 	font-size: 2.25rem;
 	color: var(--very-dark-desaturated-blue);
 	text-align: center;
-	margin-bottom: 1.875rem;
+	margin-bottom: 2.5rem;
 }
 
 .faq-accordion-card-content {
@@ -159,6 +161,23 @@ body {
 	transform: rotate(180deg);
 }
 
+/* Mobile Layout (300w)  */
+
+@media (max-width: 18.75rem) {
+	.faq-accordion-card-content {
+		padding: 0 0.75rem;
+	}
+}
+
+/* Tablet Layout (600w) */
+
+@media (min-width: 37.5rem) {
+	.card {
+		position: absolute;
+		margin-top: 0;
+	}
+}
+
 /* Tablet Layout (768w - 1024w) */
 
 @media (min-width: 48rem) and (max-width: 64rem) {
@@ -177,54 +196,53 @@ body {
 	.card {
 		display: flex;
 		width: 57.5rem;
-		height: 31.25rem;
-		margin: 8.4375rem auto 0;
+		height: 31.8125rem;
 	}
 
 	.card::after {
 		content: "";
+		width: 11.9375rem;
+		height: 11.5rem;
 		background-image: url(../images/illustration-box-desktop.svg);
 		position: absolute;
 		top: 40%;
 		left: -10%;
 		z-index: 2;
-		width: 11.9375rem;
-		height: 11.5rem;
 	}
 
 	.image-section {
-		overflow: hidden;
 		position: relative;
-		flex-basis: 50%;
 		margin-bottom: 0;
+		flex-basis: 50%;
+		overflow: hidden;
 	}
 
 	.woman-illustration {
+		width: 29.5rem;
+		height: 22.4375rem;
 		background-image: url(../images/illustration-woman-online-desktop.svg);
 		top: 53%;
 		left: 38%;
-		width: 29.5rem;
-		height: 22.4375rem;
 	}
 
 	.bg-pattern {
-		background-image: url(../images/bg-pattern-desktop.svg);
-		background-size: auto;
 		width: 60.375rem;
 		height: 59.0625rem;
-		left: -127.5%;
+		background-image: url(../images/bg-pattern-desktop.svg);
+		background-size: auto;
 		top: -60%;
+		left: -127.5%;
 	}
 
 	.text-section {
 		margin-bottom: 0;
-		padding: 3.125rem 5.9375rem 5.25rem 0;
+		padding: 3.125rem 5.9375rem 3.9375rem 0;
 		flex-basis: 50%;
 	}
 
 	.title-section {
 		text-align: left;
-		margin-bottom: 3.125rem;
+		margin-bottom: 2.8125rem;
 	}
 
 	.faq-accordion-card-content {
