--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -207,7 +207,8 @@ body {
 		position: absolute;
 		top: 40%;
 		left: -10%;
-		z-index: 2;
+		z-index: 1;
+		animation: floating 2s infinite ease-in-out;
 	}
 
 	.image-section {
@@ -247,5 +248,21 @@ body {
 
 	.faq-accordion-card-content {
 		padding: 0;
+	}
+}
+
+/* Animations */
+
+@keyframes floating {
+	0% {
+		transform: translateY(3.5px);
+	}
+
+	50% {
+		transform: translateY(0px);
+	}
+
+	100% {
+		transform: translateY(3.5px);
 	}
 }
