--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -256,14 +256,14 @@ body {
 
 @keyframes floating {
 	0% {
-		transform: translateY(3.5px);
+		transform: translateY(0.25rem);
 	}
 
 	50% {
-		transform: translateY(0px);
+		transform: translateY(0.25rem);
 	}
 
 	100% {
-		transform: translateY(3.5px);
+		transform: translateY(0.25rem);
 	}
 }
